Bug 196999 - Calendar is ignoring selection of date/week but respecting month
Summary: Calendar is ignoring selection of date/week but respecting month
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Dates (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-18 12:40 UTC by Elmar Höfner
Modified: 2012-06-27 11:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar Höfner 2009-06-18 12:40:17 UTC
Version:           1.0.0-beta1 (using 4.2.4 (KDE 4.2.4), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.29.4-2009-06-11

After updating (0.10.0 -> 1.0.0.-beta1), the calendar view only respects clicks on the whole month or year. However, if you click on a single date, a week or multiselected dates, still the images of the whole month are shown.
Rebuilding database/fingerprints did not solve the problem, neither did deleting digikamrc.

KDE 4.2.4
Debian Sid
Comment 1 Marcel Wiesweg 2009-06-18 19:57:16 UTC
Cannot confirm, working nicely with trunk. Anything special to consider to reproduce this bug?
Comment 2 Elmar Höfner 2009-06-18 21:09:48 UTC
(In reply to comment #1)
> Cannot confirm, working nicely with trunk. Anything special to consider to
> reproduce this bug?

No, nothing special. It did work with 0.10.0, but not any longer after upgrading. No other changes/updates of libraries etc. 

I can send a screenshot for clarification, if wanted.
Comment 3 Elmar Höfner 2009-06-20 12:20:25 UTC
Additional note: Selecting a date on the timeline _does_ work, though.
Comment 4 caulier.gilles 2009-06-20 12:24:38 UTC
Use small rectangle below X axis to make selection. Use control key to make non contiguous selections...

Gilles Caulier
Comment 5 Elmar Höfner 2009-06-20 20:25:52 UTC
(In reply to comment #4)
> Use small rectangle below X axis to make selection. Use control key to make non
> contiguous selections...
> 
> Gilles Caulier

Yes, no problem with timeline selection. The problem is only with date selection in the calendar view. And even there, I can click on a date and it seems to be selected, but the images keep the same (no filtering happens).
Comment 6 Marcel Wiesweg 2009-06-20 21:28:01 UTC
Ah yes, I confirm. I also though of the timeline first, but you are correctly talking of calendar. Gilles, in the "Calendar" view, second left side tab, the calendar widget at the bottom is broken. IIRC the available days should be highlighted there, but all days are greyed out.
Comment 7 caulier.gilles 2009-06-20 21:37:07 UTC
Yes, i confirm.... very strange. I don't touch this widget since a long time...

Gilles
Comment 8 caulier.gilles 2009-06-20 22:17:06 UTC
Marcel,

MonthWidget is not disable. Select a month in Date folder view and look like it switch properly.

Set a kDebug() trace in MonthWidget::slotAddItems() and look this slot never called. so the day map is never fill with DB info.

Something is wrong in another place, not in this widget.

Gilles
Comment 9 Marcel Wiesweg 2009-07-20 17:22:50 UTC
SVN commit 999907 by mwiesweg:

Reimplement MonthWidget loading to work with the current image model.

BUG: 196999

 M  +3 -1      NEWS  
 M  +5 -0      digikam/datefolderview.cpp  
 M  +4 -1      digikam/datefolderview.h  
 M  +1 -0      digikam/digikamview.cpp  
 M  +86 -34    digikam/monthwidget.cpp  
 M  +9 -2      digikam/monthwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=999907