Reimplement MonthWidget loading to work with the current image model.

BUG: 196999

svn path=/trunk/extragear/graphics/digikam/; revision=999907